--- a/package.json
+++ b/package.json
@@ -31,24 +31,6 @@
     "type": "git",
     "url": ""
   },
-  "jest": {
-    "testPathIgnorePatterns": [
-      "/node_modules/",
-      "/src/"
-    ],
-    "moduleDirectories": [
-      "node_modules",
-      "src"
-    ],
-    "transform": {
-      "^.+\\.jsx?$": "babel-jest",
-      ".+\\.(css|styl|less|sass|scss)$": "jest-transform-css"
-    },
-    "setupFilesAfterEnv": [
-      "jest-enzyme"
-    ],
-    "testEnvironment": "enzyme"
-  },
   "devDependencies": {
     "@babel/core": "^7.4.3",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
@@ -56,7 +38,11 @@
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.4.0",
+    "@dx/xbee": "^0.3.3",
+    "@dx/xpanda": "^0.0.10",
+    "antd": "^4.1.4",
     "autoprefixer": "^9.1.5",
+    "axios": "^0.19.2",
     "babel-eslint": "^9.0.0",
     "babel-jest": "^24.7.1",
     "babel-loader": "^8.0.2",
@@ -83,33 +69,31 @@
     "less-loader": "^4.1.0",
     "lint-staged": "^8.1.0",
     "mini-css-extract-plugin": "^0.4.0",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.2.2",
+    "moment": "^2.24.0",
+    "night-kay": "^0.3.3",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-less": "^2.0.0",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.15.3",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-hot-loader": "^4.3.6",
+    "react-router-dom": "^5.1.2",
     "style-loader": "^0.23.0",
-    "svg-url-loader": "^2.3.2",
+    "ts-jest": "^25.4.0",
+    "ts-loader": "^7.0.0",
+    "typescript": "^3.8.3",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.1.1",
-    "webpack": "^4.17.2",
+    "webpack": "^4.42.1",
     "webpack-cleanup-plugin": "^0.5.1",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.7"
+    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
-    "antd": "^3.9.1",
-    "axios": "^0.18.0",
-    "babel-polyfill": "^6.26.0",
-    "bundle-loader": "^0.5.6",
-    "classnames": "^2.2.6",
-    "lottie-web": "^5.5.10",
-    "mobx": "^5.1.0",
-    "mobx-react": "^5.2.6",
-    "moment": "^2.22.2",
-    "prop-types": "^15.6.2",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-router-dom": "^4.3.1"
+    "bundle-loader": "^0.5.6"
   }
 }
