--- a/package.json
+++ b/package.json
@@ -32,15 +32,17 @@
     "url": ""
   },
   "devDependencies": {
+    "@antv/data-set": "^0.11.4",
+    "@antv/g2": "^4.0.13",
     "@babel/core": "^7.4.3",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/plugin-proposal-decorators": "^7.0.0",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.4.0",
+    "@dx/dx-actions": "^0.1.3",
     "@dx/xbee": "^0.3.3",
     "@dx/xpanda": "^0.0.10",
-    "antd": "^4.1.4",
     "autoprefixer": "^9.1.5",
     "axios": "^0.19.2",
     "babel-eslint": "^9.0.0",
@@ -49,7 +51,9 @@
     "babel-plugin-import": "^1.8.0",
     "babel-plugin-react-css-modules": "^3.4.2",
     "copy-webpack-plugin": "^5.0.5",
+    "core-js": "^3.6.5",
     "css-loader": "^1.0.0",
+    "d3": "^5.16.0",
     "dx-mock": "^0.1.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
@@ -70,7 +74,7 @@
     "lint-staged": "^8.1.0",
     "mini-css-extract-plugin": "^0.4.0",
     "mobx": "^5.15.4",
-    "mobx-react": "^6.2.2",
+    "mobx-react": "6.1.4",
     "moment": "^2.24.0",
     "night-kay": "^0.3.3",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
@@ -82,6 +86,7 @@
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.3.6",
     "react-router-dom": "^5.1.2",
+    "regenerator-runtime": "^0.13.7",
     "style-loader": "^0.23.0",
     "ts-jest": "^25.4.0",
     "ts-loader": "^7.0.0",
