--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "BABEL_ENV=development webpack-dev-server -w --open --env=development",
     "_build": "BABEL_ENV=production webpack --progress --env=production",
+    "build:vendor": "BABEL_ENV=production webpack --progress --env=vendor",
     "build": "npm run _build && npm run tar",
     "tar": "tar zcvf build.tar.gz build",
     "prettier": "prettier --write 'src/**/*.js' 'src/**/*.jsx'",
@@ -43,12 +44,12 @@
     "@dx/dx-actions": "^0.1.3",
     "@dx/xbee": "^0.3.3",
     "@dx/xpanda": "^0.0.10",
+    "@hot-loader/react-dom": "^16.13.0",
     "autoprefixer": "^9.1.5",
     "axios": "^0.19.2",
     "babel-eslint": "^9.0.0",
     "babel-jest": "^24.7.1",
     "babel-loader": "^8.0.2",
-    "babel-plugin-import": "^1.8.0",
     "babel-plugin-react-css-modules": "^3.4.2",
     "copy-webpack-plugin": "^5.0.5",
     "core-js": "^3.6.5",
@@ -84,7 +85,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-hot-loader": "^4.3.6",
+    "react-hot-loader": "^4.12.21",
     "react-router-dom": "^5.1.2",
     "regenerator-runtime": "^0.13.7",
     "style-loader": "^0.23.0",
