--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.4.0",
     "@dx/dx-actions": "^0.1.3",
+    "@dx/dx-request": "^1.1.5",
     "@dx/xbee": "^0.3.3",
     "@dx/xpanda": "^0.0.10",
     "@hot-loader/react-dom": "^16.13.0",
