--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "@babel/plugin-proposal-decorators": "^7.0.0",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.10.4",
     "@babel/register": "^7.4.0",
     "@dx/dx-actions": "^0.1.3",
     "@dx/dx-request": "^1.1.5",
     "@dx/xbee": "^0.3.3",
     "@dx/xpanda": "^0.0.10",
     "@hot-loader/react-dom": "^16.13.0",
+    "@types/react": "^16.9.43",
     "autoprefixer": "^9.1.5",
     "axios": "^0.19.2",
     "babel-eslint": "^9.0.0",
