--- a/package.json
+++ b/package.json
@@ -31,25 +31,9 @@
     "url": ""
   },
   "devDependencies": {
-    "@dx/dx-actions": "^0.1.3",
-    "@dx/hawk-cli": "^0.0.21",
-    "@dx/xbee": "^0.6.7",
-    "@dx/xpanda": "^0.0.17",
-    "@types/classnames": "^2.2.10",
-    "@types/get-value": "^3.0.1",
-    "@types/node": "^14.0.11",
-    "@types/react": "^16.9.35",
-    "@types/react-css-modules": "^4.6.2",
-    "@types/react-dom": "^16.9.8",
-    "husky": "^1.3.1",
-    "lint-staged": "^8.1.0",
-    "mobx": "^5.15.4",
-    "mobx-react": "^6.2.2",
-    "night-kay": "^0.3.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-hot-loader": "^4.12.21",
-    "react-router-dom": "^5.2.0"
+    "@dx/hawk-cli": "^0.0.29",
+    "core-js": "^3.6.5",
+    "regenerator-runtime": "^0.13.7"
   },
   "dependencies": {
     "bundle-loader": "^0.5.6"
